<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.6</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>uk.co.mpcontracting</groupId>
  <artifactId>rpm-jukebox</artifactId>
  <version>6.0.1</version>

  <properties>
    <!-- Download the JavaFX jmods package from here - https://gluonhq.com/products/javafx/ -->
    <!-- Make sure to update the property below with their location -->
    <javafx.jmods.location>${user.home}/Development/JavaFX</javafx.jmods.location>

    <java.version>21</java.version>
    <javafx.version>23.0.1</javafx.version>
    <spring-boot-javafx.version>2.1.6</spring-boot-javafx.version>
    <lucene.version>10.0.0</lucene.version>
    <commons-version.version>1.0.0</commons-version.version>
    <jna.version>5.15.0</jna.version>

    <textfx.version>4.0.18</textfx.version>
    <testfx.monocle.version>17.0.10</testfx.monocle.version>
    <faker.version>1.0.2</faker.version>
    <commons-io.version>2.16.1</commons-io.version>
    <guava.version>33.3.1-jre</guava.version>

    <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
    <javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <jlink-maven-plugin.version>0.1.11</jlink-maven-plugin.version>
    <jpackage-maven-plugin.version>0.1.5</jpackage-maven-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>jakarta.validation</groupId>
      <artifactId>jakarta.validation-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>de.roskenet</groupId>
      <artifactId>springboot-javafx-support</artifactId>
      <version>${spring-boot-javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty.ee10</groupId>
      <artifactId>jetty-ee10-servlet</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-queries</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-analysis-common</artifactId>
      <version>${lucene.version}</version>
    </dependency>
    <dependency>
      <groupId>com.igormaznitsa</groupId>
      <artifactId>commons-version</artifactId>
      <version>${commons-version.version}</version>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>${jna.version}</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>${textfx.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit5</artifactId>
      <version>${textfx.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>openjfx-monocle</artifactId>
      <version>${testfx.monocle.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.javafaker</groupId>
      <artifactId>javafaker</artifactId>
      <version>${faker.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <extensions>
      <extension>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>${os-maven-plugin.version}</version>
      </extension>
    </extensions>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <outputDirectory>${project.build.directory}/jlink/libs</outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx-maven-plugin.version}</version>
        <configuration>
          <mainClass>uk.co.mpcontracting.rpmjukebox.RpmJukebox</mainClass>
          <options>
            <option>-Ddirectory.config=.rpmjukeboxdev --enable-native-access=ALL-UNNAMED</option>
          </options>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <configuration>
          <excludes>
            <!-- Exclude all anonymous classes -->
            <exclude>**/*$*.*</exclude>

            <!-- Exclude the main startup class as it can't be fully tested -->
            <exclude>uk/co/mpcontracting/rpmjukebox/RpmJukebox.*</exclude>
          </excludes>
          <rules>
            <rule>
              <element>CLASS</element>
              <limits>
                <limit>
                  <counter>INSTRUCTION</counter>
                  <value>COVEREDRATIO</value>
                  <minimum>0.80</minimum>
                </limit>
                <limit>
                  <counter>BRANCH</counter>
                  <value>COVEREDRATIO</value>
                  <minimum>0.80</minimum>
                </limit>
              </limits>
            </rule>
          </rules>
        </configuration>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <formats>
                <format>HTML</format>
              </formats>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.akman</groupId>
        <artifactId>jlink-maven-plugin</artifactId>
        <version>${jlink-maven-plugin.version}</version>
        <configuration>
          <noheaderfiles>true</noheaderfiles>
          <nomanpages>true</nomanpages>
          <stripdebug>true</stripdebug>
          <compress>
            <compression>ZIP</compression>
          </compress>
          <modulepath>
            <dirsets>
              <dirset>
                <directory>${javafx.jmods.location}</directory>
                <includes>
                  <include>javafx-jmods-${javafx.version}</include>
                </includes>
              </dirset>
            </dirsets>
          </modulepath>
          <addmodules>
            <addmodule>java.naming</addmodule>
            <addmodule>javafx.controls</addmodule>
            <addmodule>javafx.fxml</addmodule>
            <addmodule>javafx.media</addmodule>
          </addmodules>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.akman</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <version>${jpackage-maven-plugin.version}</version>
        <configuration>
          <name>RPM Jukebox</name>
          <type>PLATFORM</type>
          <input>${project.build.directory}/jlink/libs</input>
          <runtimeimage>${project.build.directory}/jlink/image</runtimeimage>
          <appversion>${project.version}</appversion>
          <resourcedir>${project.basedir}/src/main/deploy/${os.detected.name}</resourcedir>
          <mainjar>${project.artifactId}-${project.version}.jar</mainjar>
          <mainclass>uk.co.mpcontracting.rpmjukebox.RpmJukebox</mainclass>
          <javaoptions>--enable-native-access=ALL-UNNAMED</javaoptions>
          <macsign>true</macsign>
          <!--suppress UnresolvedMavenProperty -->
          <macsigningkeyusername>Developer ID Application: ${env.APPLE_DEV_ID}</macsigningkeyusername>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>